# python-discord-logger

./: README.md  pyproject.toml  setup.cfg  tests.py
logger/: utils.py
src/logger/: utils.py
