[tool.poetry]
name = "python-discord-logger"
version = "0.1.0"
description = ""
authors = ["Chanuk Kim <cksdnr987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
