[metadata]
name = python-discord-logger
version = 1.0.0
url = https://github.com/thehoodieguy/python-discord-logger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src